# api_vitibrasil

./: .gitignore  Dockerfile  README.md  build_and_run.sh  crontab  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml
api_vitibrasil/: app.py  main.py  start.py
api_vitibrasil/api/v1/: routes.py
api_vitibrasil/modules/: csv_downloader.py  csv_processor.py
api_vitibrasil/services/: data_fetcher.py  data_fetcher_ie.py  data_read.py  verify_credentials.py
csv/: pyproject.toml
csv/csv/: Dockerfile  interativo.ipynb  load_csv_to_redis.py
tests/: test.py  test_app.py
