[tool.poetry]
name = "api-vitibrasil"
version = "0.1.0"
description = ""
authors = ["Lucasas001 <lucas.as1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = {extras = ["standard"], version = "^0.115.3"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"
ruff = "^0.7.1"
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
run = 'fastapi dev api_vitibrasil/app.py'
test = 'pytest -s -x --cov=api_vitibrasil -vv'
post_test = 'coverage html'