[tool.poetry]
name = "api-vitibrasil"
version = "0.1.0"
description = ""
authors = ["iamthehype <lucasec911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.12.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
docker = "^7.1.0"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pandas = "^2.2.3"
pytest = "^8.3.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api_vitibrasil.start:main"

[tool.pytest.ini_options]
pythonpath = "./tests"
addopts = '-p no:warnings'